--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
+html {
+	font-size: 62.5%;
+}
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+	font-family: sans-serif;
+	font-size: 1.4rem;
 }
