--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -7,6 +7,7 @@
 .Jumbotext {
 	font-size: 48px;
 }
+
 .Logo {
 	background-color: transparent;
 	padding: 1px;
@@ -16,4 +17,10 @@
 }
 .Logo img {
 	height: 100%;
+}
+@media (max-width: 500px) {
+	.Home img {
+		width: 80%;
+		min-width: 200px;
+	}
 }
