--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.css
@@ -3,6 +3,7 @@
 	box-sizing: border-box;
 	display: block;
 	width: 100%;
+	white-space: nowrap;
 }
 
 .NavigationItem a {
@@ -33,11 +34,15 @@
 		padding: 16px 10px;
 		border-bottom: 4px solid transparent;
 	}
-	.NavigationItem a:hover,
+	.NavigationItem a:hover {
+		border-bottom: 4px solid orange;
+		color: orange;
+	}
 	.NavigationItem a:active,
 	.NavigationItem a.active {
 		/* background-color: #ccc; */
-		border-bottom: 4px solid #40a4c8;
-		color: #000;
+		border-bottom: 4px solid #25c0f0;
+		color: #25c0f0;
+		font-weight: bold;
 	}
 }
