--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -20,7 +20,18 @@
 .Logo {
 	height: 80%;
 }
-
+.NameContainer {
+	text-align: right;
+	padding-right: 10px;
+	box-sizing: border-box;
+	color: orange;
+	width: 100%;
+}
+.DisplayName {
+	font-weight: bold;
+	color: #3b97e0;
+	font-size: 1.5rem;
+}
 @media (max-width: 499px) {
 	.DesktopOnly {
 		display: none;
