--- a/src/containers/DailyUpdates/DailyUpdates.css
+++ b/src/containers/DailyUpdates/DailyUpdates.css
@@ -2,6 +2,7 @@
 	font-size: inherit;
 	text-align: center;
 	box-sizing: border-box;
+	display: flex;
 }
 .Form {
 	margin: 10px auto;
@@ -14,11 +15,16 @@
 }
 .imgContainer {
 	height: 250px;
+	margin: 15px;
 }
 .imgContainer img {
 	height: 100%;
 }
-
+@media (max-width: 700px) {
+	.DailyUpdates {
+		display: block;
+	}
+}
 @media (max-width: 500px) {
 	.imgContainer {
 		height: 30%;
