--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -7,8 +7,15 @@
 .Jumbotext {
 	font-size: 48px;
 	color: #2882b4;
+	margin-bottom: 0;
+	padding-bottom: 0;
 }
-
+.Subtitle {
+	/* margin-top: -10px; */
+	font-size: 20px;
+	color: orange;
+	margin-left: 120px;
+}
 .Logo {
 	background-color: transparent;
 	padding: 1px;
@@ -19,9 +26,30 @@
 .Logo img {
 	height: 100%;
 }
+.KshipaniContainer {
+	height: 50px;
+	text-transform: capitalize;
+}
+.KshipaniImage,
+.KshipaniContainer img {
+	height: 100%;
+	width: auto;
+	/* margin-top: 30px; */
+}
 @media (max-width: 500px) {
 	.Home img {
 		width: 80%;
 		min-width: 200px;
+	}
+	.KshipaniContainer img {
+		height: 100%;
+		width: auto;
+		min-width: auto;
+		/* margin-top: 30px; */
+	}
+}
+@media (max-width: 300px) {
+	.Subtitle {
+		display: none;
 	}
 }
