--- a/src/components/Navigation/SideDrawer/SideDrawer.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.css
@@ -13,11 +13,12 @@
 	border-right: 1px solid silver;
 	box-shadow: 0px 3px 10px gray;
 }
-
-@media (min-width: 500px) {
-	.SideDrawer {
-		display: none;
-	}
+.Jumbotext {
+	font-size: 28px;
+	color: #2882b4;
+	margin-bottom: 0;
+	padding-bottom: 0;
+	text-align: center;
 }
 .Open {
 	transform: translateX(0);
@@ -27,5 +28,14 @@
 }
 .Logo {
 	height: 100px;
-	margin-bottom: 42px;
+}
+
+@media (min-width: 500px) {
+	.SideDrawer {
+		display: none;
+	}
+	.Jumbotext {
+		margin-bottom: 42px;
+		font-size: 48px;
+	}
 }
