--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -1,6 +1,7 @@
 .Toolbar {
 	height: 56px;
 	width: 100%;
+	min-width: 350px;
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -34,6 +35,11 @@
 }
 @media (max-width: 499px) {
 	.DesktopOnly {
+		display: none;
+	}
+}
+@media only print {
+	.Toolbar {
 		display: none;
 	}
 }
