Refactored form field validation and input handler to utility file Added Team Room container to Add, Delete and View under Team Room page Loading Team Rooms from the DB

--- a/src/components/UI/Button/Button.css
+++ b/src/components/UI/Button/Button.css
@@ -12,12 +12,17 @@
 
 .Button:first-of-type {
 	margin-left: 0;
-	padding-left: 0;
+	/* padding-left: 0; */
 }
 .Button:disabled {
 	color: #ccc;
 	cursor: not-allowed;
 }
+.Button:focus {
+	border: 1px solid orange;
+	box-shadow: 0px 0px 1px orange;
+}
+
 .Success {
 	color: #5c9210;
 }
@@ -32,10 +37,6 @@
 	color: #fff;
 	background: rgba(110, 128, 110, 0.5);
 	width: 100%;
-}
-.Button:focus {
-	border: 1px solid orange;
-	box-shadow: 0px 0px 5px orange;
 }
 .Danger {
 	color: #944317;
