--- a/src/containers/DailyUpdates/DailyUpdates.css
+++ b/src/containers/DailyUpdates/DailyUpdates.css
@@ -6,25 +6,25 @@
 }
 .Form {
 	margin: 10px auto;
-	width: 80%;
+	/* width: 80%; */
 	text-align: center;
 	box-shadow: 0 2px 3px #ccc;
 	border: 1px solid #eee;
 	padding: 10px;
 	box-sizing: border-box;
+	width: 100%;
 }
 .imgContainer {
-	height: 250px;
-	margin: 15px;
+	/* height: 250px; */
+	/* margin: 15px; */
 }
-.imgContainer img {
+/* .imgContainer img {
 	height: 100%;
-}
+} */
 .Error {
 	color: #fff;
 	padding: 5px 50px;
 	background: red;
-	font-weight: bold;
 }
 .Message {
 	color: #1e1e1e;
@@ -36,8 +36,12 @@
 	.DailyUpdates {
 		display: block;
 	}
+	.imgContainer {
+		/* height: 30%; */
+		display: none;
+	}
 }
-@media (max-width: 600px) {
+/* @media (max-width: 600px) {
 	.imgContainer {
 		height: 30%;
 	}
@@ -45,4 +49,4 @@
 		width: 80%;
 		height: auto;
 	}
-}
+} */
