1. Added Delete feature for Daily updates 2. Team Room GUI change 3. Displaying Team Room name in Daily update cards

--- a/src/components/DailyUpdate/DailyUpdate.css
+++ b/src/components/DailyUpdate/DailyUpdate.css
@@ -53,3 +53,23 @@
 .Obstacle {
 	color: red;
 }
+
+.Toolbar {
+	display: flex;
+	justify-content: space-between;
+}
+.Delete {
+	display: inline-block;
+	border-radius: 50%;
+	width: 20px;
+	padding: 2px;
+	cursor: pointer;
+	color: #ccc;
+	text-align: center;
+	line-height: 16px;
+	font-size: 16px;
+}
+.Delete:hover {
+	color: orange;
+	font-weight: bold;
+}
