--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -18,6 +18,11 @@
 	width: 100%;
 	box-sizing: border-box;
 	border-radius: 3px;
+	margin: 2px;
+}
+input.InputElement[type='text'] {
+	margin: 0px;
+	height: 34px;
 }
 .InputElement:focus {
 	outline: none;
