--- a/src/components/DailyUpdate/DailyUpdate.css
+++ b/src/components/DailyUpdate/DailyUpdate.css
@@ -5,10 +5,8 @@
 	text-align: left;
 	padding: 5px;
 	margin: 10px 5px;
-	/* flex: 1; */
-	min-width: 300px;
-	max-width: 75%;
-	flex-basis: 0; /* default value */
+	min-width: 45%;
+	flex-basis: 0;
 	flex-grow: 1;
 }
 .User {
@@ -25,7 +23,6 @@
 .CreatedAt {
 	color: gray;
 	font-size: 12px;
-	/* margin-left: 10px; */
 }
 .CommentContainer {
 	margin: 10px;
