--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -13,22 +13,28 @@
 	outline: none;
 	border: 1px solid #ccc;
 	background-color: #fff;
+	border-radius: 4px;
 	padding: 6px 10px;
 	display: block;
 	width: 100%;
 	box-sizing: border-box;
-	border-radius: 3px;
 	margin: 2px;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+	transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 input.InputElement[type='text'] {
 	margin: 0px;
 	height: 34px;
 }
 .InputElement:focus {
-	outline: none;
-	background: #f3f3f3;
+	outline: 0;
+	/* background: #f3f3f3; */
+	border-color: #66afe9;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
 }
-.InvalidElement {
-	border: 1px solid red;
-	background-color: #ffce71;
+.InvalidElement,
+.InvalidElement:focus {
+	border-color: red;
+	background-color: rgb(252, 210, 96);
+	box-shadow: inset 0 1px 1px rgba(201, 149, 149, 0.075), 0 0 8px rgba(240, 35, 8, 0.6);
 }
