--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -4,6 +4,32 @@ html {
 	min-width: 350px;
 	color: #a0a0a0;
 }
+
+/* SCROLL BAR CHANGE */
+/* width */
+::-webkit-scrollbar {
+	width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 5px grey;
+	border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: rgb(161, 231, 248);
+	border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: rgb(0, 204, 255);
+}
+
+/* END of scroll */
+
 .MainContainer {
 	min-width: 350px;
 }
