--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -11,6 +11,7 @@
 }
 .InputElement {
 	outline: none;
+	color: #757575;
 	border: 1px solid #ccc;
 	background-color: #fff;
 	border-radius: 4px;
@@ -35,6 +36,6 @@ input.InputElement[type='text'] {
 .InvalidElement,
 .InvalidElement:focus {
 	border-color: red;
-	background-color: rgb(252, 210, 96);
+	background-color: #fddd9b;
 	box-shadow: inset 0 1px 1px rgba(201, 149, 149, 0.075), 0 0 8px rgba(240, 35, 8, 0.6);
 }
