--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -13,7 +13,7 @@ blockquote {
 /* SCROLL BAR CHANGE */
 /* width */
 ::-webkit-scrollbar {
-	width: 8px;
+	width: 5px;
 }
 
 /* Track */
@@ -24,13 +24,15 @@ blockquote {
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-	background: #e4e4e4;
+	/* background: #e4e4e4; */
+	background: #b5d8f5;
 	border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-	background: #cdcdcd;
+	/* background: #cdcdcd; */
+	background: #f5c27f;
 }
 
 /* END of scroll */
