--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -23,7 +23,8 @@
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
 	transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
-input.InputElement[type='text'] {
+input.InputElement[type='text'],
+select.InputElement {
 	margin: 0px;
 	height: 34px;
 }
