--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -13,12 +13,12 @@ blockquote {
 /* SCROLL BAR CHANGE */
 /* width */
 ::-webkit-scrollbar {
-	width: 5px;
+	width: 6px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 5px grey;
+	box-shadow: inset 0 0 5px transparent;
 	border-radius: 10px;
 }
 
