--- a/src/components/TeamRoom/TeamRoom.css
+++ b/src/components/TeamRoom/TeamRoom.css
@@ -15,6 +15,8 @@
 	color: #2882b4;
 	font-weight: bold;
 	white-space: nowrap;
+	display: flex;
+	justify-content: space-between;
 }
 .OwnerName {
 	padding: 0 10px;
